<resources>
    <string name="app_name">knowledgeshare</string>
    <string name="mine">我的</string>
    <string name="xxsj">学习时间</string>
    <string name="wddy">我的订阅</string>
    <string name="xxjl">学习记录</string>
    <string name="wdzh">我的账户</string>
    <string name="wdxz">我的勋章</string>
    <string name="zhaq">账号安全</string>
    <string name="yxxsc">已学习时长</string>
    <string name="lxxxts">连续学习天数</string>

</resources>
