<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/item_title_layout"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_mine">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/mine_bg"
                        android:paddingBottom="25dp">
                        <www.knowledgeshare.com.knowledgeshare.view.CircleImageView
                            android:id="@+id/mine_face_iv"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/face" />
                        <TextView
                            android:id="@+id/mine_name_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/mine_face_iv"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:text="行走的肉夹馍"
                            android:textColor="@color/white"
                            android:textSize="14dp" />
                        <LinearLayout
                            android:id="@+id/view_08"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_toRightOf="@+id/mine_face_iv"
                            android:layout_marginTop="50dp"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/xz_start_iv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/power_xz_v0"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="默认"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/white"
                                android:textSize="10sp"/>
                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:progressDrawable="@drawable/mine_progressbar"
                            android:layout_toRightOf="@+id/view_08"
                            android:layout_width="100dp"
                            android:layout_height="4dp"
                            android:max="100"
                            android:layout_marginTop="60dp"
                            android:layout_marginLeft="10dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/progressBar"
                            android:gravity="center_horizontal"

                            android:orientation="vertical"
                            android:layout_marginTop="50dp"
                            android:layout_marginLeft="10dp">

                            <ImageView
                                android:id="@+id/xz_end_iv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/power_xz_v1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="铜勋章"
                                android:textColor="@color/white"
                                android:textSize="10sp"/>
                        </LinearLayout>


                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="22dp"/>

                </LinearLayout>
                <Button
                    android:id="@+id/qiandao_btn"
                    android:layout_width="150px"
                    android:layout_height="60px"
                    android:background="@drawable/bg_qiandao"
                    android:text="签到"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="end|bottom"
                    android:textColor="@color/white" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_wanjiao"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <RelativeLayout
                    android:id="@+id/xxsj_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/view_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_study"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/view_01"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:text="@string/xxsj"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_back"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_mine"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <RelativeLayout
                    android:id="@+id/wddy_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/view_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_dingyue"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/view_02"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black"
                        android:text="@string/wddy"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_back"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_mine"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <RelativeLayout
                    android:id="@+id/xxjl_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/view_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_xxjl"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/view_03"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black"
                        android:text="@string/xxjl"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_back"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_mine"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <RelativeLayout
                    android:id="@+id/wdzh_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/view_04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_wdzh"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/view_04"
                        android:textColor="@color/black"
                        android:text="@string/wdzh"/>
                    <TextView
                        android:id="@+id/zhye_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="0.00"
                        android:layout_toLeftOf="@+id/view_05"
                        android:layout_marginRight="10dp"/>
                    <ImageView
                        android:id="@+id/view_05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_back"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_mine"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <RelativeLayout
                    android:id="@+id/wdxz_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/view_06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_wdxz"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/view_06"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black"
                        android:text="@string/wdxz"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_back"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_mine"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <RelativeLayout
                    android:id="@+id/zhaq_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <ImageView
                        android:id="@+id/view_07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_zhaq"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/view_07"
                        android:textColor="@color/black"
                        android:text="@string/zhaq"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/power_back"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>